[package]
name = "simpla_parser"
version = "0.1.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extract_line_error = {path = "../extract_line_error", version = "0.1.0"}
lalrpop-util = "0.19.0"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { version = "0.19.0",  features = ["lexer"]}